--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 </div>
 
-  <script src='index.js'></script>  
+  <script src='index.js'></script> 
+  <script src='search.js'></script>  
 </body>
 </html>
