--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 <div id="cards" onload="setHomePagePosts()">
 
 </div>
+
+<div>
+  Well hello there!
+</div>
+
     <script>
         // Execute the function after the DOM has fully loaded
         document.addEventListener("DOMContentLoaded", function(event) { 
