--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 
 <div>
-  Well hello there!
+  Well hello there! I am the group leader of Tech pioneers! My name is Kat.
 </div>
 
     <script>
