--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!--Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!--FontAwesome Footer CDN-->
+    <script src="https://kit.fontawesome.com/ac7f3340d5.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -54,11 +57,46 @@
 </div>
 <div id="cards" onload="setHomePagePosts()">
 
+
+
 </div>
 
-<div>
-  Well hello there! I am the group leader of Tech pioneers! My name is Kat.
+<footer>
+  <div class="footer-content">
+  Subscribe to our 
+  <br>
+  newsletter!
+  <br>
+  <input id="email-input" type="email" placeholder="Your email address">
+  <button class="submit-button" type="submit">
+    <i class="fa-solid fa-arrow-right"></i>
+  </button>
+ 
 </div>
+  <div class="bottom">
+      <div class="copyright">
+       &copy; 2024 Tech Pioneers
+      </div>
+      
+       <div class="icons-footer">
+        <i class="fa-regular fa-thumbs-up"></i>
+        <i class="fa-brands fa-x-twitter"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+       </div>
+       <nav class="nav-footer">
+           <ul>
+              <li><a href="#">Home</a> </li>
+              <li><a href="#">About</a> </li>
+              <li><a href="#">Contact</a> </li>
+           </ul>
+        </nav>
+  </div>
+
+
+
+
+  
+</footer>
 
     <script>
         // Execute the function after the DOM has fully loaded
