--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Tech pioneers</title>
 
     <!--CSS link-->
-    <link rel="stylesheet" href="./styles.css">
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,10 +16,33 @@
 
     <!--Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./contact_style.css">
 </head>
 <body>
 
+  <nav class="bg-white px-2 py-3">
+    <div class="container mx-0 d-flex justify-content-between">
+        <div class="logo">
+            Tech Pioneers
+        </div>
+        <div class="d-lg-none">
+            <button type="button" class="btn" title="toggle-menu"><i class="ri-menu-2-line"></i></button>
+        </div>
+        <div class="d-flex" style="transform: translateX(10rem);">
+            <ul class="d-flex list-unstyled nav-list my-2">
+                <li><a href="index.html">Home</a></li>
+                <li>Services</li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+            <div>
+                <a href="contact.html"><button type="button" class="btn btn-primary mt-1 contact-btn" style="background-color:#8C52FF;">Contact</button></a>
+            </div>
+        </div>
+       
+    </div>
+</nav>iv>
+  </nav>
     <!--Hero Section-->
 
     <div class="container col-xxl-8 px-4 py-5">
@@ -32,9 +54,9 @@
             <img src="./images/4ir.jpg" class="d-block mx-lg-auto rounded img-fluid" alt="4ir" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">4 IR.</h1>
-            <h2 class="lead fw-bold lh-lg">Embracing the Fourth Industrial Revolution: Harnessing Technology for a Sustainable Future.</h2>
-            <p class="lead mb-0 lh-base">Industry 4.0, which is synonymous with smart manufacturing, is the realization of the digital transformation of the field,
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" id="hero-h1">4 IR.</h1>
+            <h2 class="lead fw-bold lh-lg" id="hero-h2">Embracing the Fourth Industrial Revolution: Harnessing Technology for a Sustainable Future.</h2>
+            <p class="lead mb-0 lh-base" id="hero-p">Industry 4.0, which is synonymous with smart manufacturing, is the realization of the digital transformation of the field,
                  delivering real-time decision making,enhanced productivity, flexibility <a href="https://www.ibm.com/topics/industry-4-0" class="text-body-emphasis fw-bold">Continue reading...</a></p>
           </div>
         </div>
@@ -52,7 +74,7 @@
     </form>
 
 </div>
-<div id="cards" onload="setHomePagePosts()">
+<div id="post-cards" onload="setHomePagePosts()">
 
 </div>
     <script>
@@ -61,7 +83,6 @@
             setHomePagePosts(); 
         });
     </script>
-
   <script src='index.js'></script> 
   <script src='search.js'></script>  
 
