--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 </head>
 <body>
 
-    <!--Hero Section-->
 
     <div class="container col-xxl-8 px-4 py-5">
 
@@ -40,7 +39,7 @@
         </div>
       </div>
 
-
+<!--searchbar-->
 <div class="searchbar">
     <div class="search-buttons">
         <button onclick="setHomePagePosts()" class="button-searchbar" >Latest</button>
@@ -68,6 +67,8 @@
     </script>
 
   <script src='index.js'></script> 
+
+	<!--search bar script-->
   <script src='search.js'></script>  
 
 </body>
