--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                                 <div class="card my-lg-3 border-0 shadow px-1">
                                     <div class="body">
                                         <div class="d-flex">
-                                            <span class="contact-icons"><i class="ri-mail-line"></i></span>
+                                            <span class="contact-icons"><i class="ri-phone-line"></i></span>
                                             <div>
                                                 <div style="display: inline-block; margin-top: 30px;">
                                                     <div class="contact-head">Email</div>
