--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         </div>
        
     </div>
-</nav>iv>
   </nav>
     <!--Hero Section-->
 
@@ -108,13 +107,13 @@
         <i class="fa-brands fa-x-twitter"></i>
         <i class="fa-brands fa-whatsapp"></i>
        </div>
-       <nav class="nav-footer">
+       <div class="nav-footer">
            <ul>
               <li><a href="#">Home</a> </li>
               <li><a href="#">About</a> </li>
               <li><a href="#">Contact</a> </li>
            </ul>
-        </nav>
+          </div>
   </div>
 
 
