--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
 
 <!--Hero-->
-<div class="container">
+<div class="container" id="hero-container">
 
         <div class="row flex-lg-row-reverse align-items-center w-auto p-3  g-5 py-5">
           <div class="col-10s col-lg-6">
@@ -79,8 +79,6 @@
     </form>
 
 </div>
-<div id="cards" onload="setHomePagePosts()">
-
 
 <div id="post-cards" onload="setHomePagePosts()">
 
