added form spree

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                         
                     </div>
                 </div>
-                    <form action="" method="post" class="col-4 p-3 shadow" >
+                    <form action="https://formspree.io/f/moqgrypo" method="post" class="col-4 p-3 shadow" >
                         <div>
                             <label for="name" class="form-label">Name</label>
                             <input
