Updated the contact us page

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                         </div>
                         <div>
                             <p class="display-6">Get In Touch</p>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus minima quia aut qui modi. </p>
+                            <p>Connect. Learn Innovate. Get in touch with Future of tech!</p>
                         </div>
                         <div class="row">
                             <div class="col-6">
@@ -78,8 +78,8 @@
                                             <span class="contact-icons"><i class="ri-facebook-circle-line"></i></span>
                                             <div>
                                                 <div style="display: inline-block; margin-top: 30px;">
-                                                    <div class="contact-head text-secondary">Facebook</div>
-                                                    <span class="contact-details">.</span>
+                                                    <div class="contact-head text-secondary">Email</div>
+                                                    <span class="contact-details">techpioneers@proton.me</span>
                                                 </div>
                         
                                             </div>
@@ -111,7 +111,7 @@
                                             <div>
                                                 <div style="display: inline-block; margin-top: 30px;">
                                                     <div class="contact-head">Email</div>
-                                                    <span class="contact-details">scottfrankie864@gmail.com</span>
+                                                    <span class="contact-details">preciousmarokane@hotmail.co.za</span>
                                                 </div>
                         
                                             </div>
