--- a/About.html
+++ b/About.html
@@ -60,7 +60,7 @@
             <div class="team-member">
                 <img src="./images/funi-image.jpg" alt="Member 2">
                 <h2>Nekhunguni Funanani</h2>
-                <p>Wed Dev</p>
+                <p>Web Dev</p>
             </div>
             <div class="team-member">
                 <img src="./images/charity-image.jpg" alt="Member 3">
@@ -75,7 +75,7 @@
             <div class="team-member">
                 <img src="./images/frank-image.jpg" alt="Member 5">
                 <h2>Mosehla Nkululeklo Frank</h2>
-                <p>Wed Dev</p>
+                <p>Web Dev</p>
             </div>
         </div>
         <style>
