--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <nav class="bg-white px-2 py-3">
         <div class="container mx-0 d-flex justify-content-between">
             <div class="logo">
-                <img src="./images/IMG-20240502-WA0020.jpg" style="height : 200px; object-fit : cover"/>
+                <img src="./images/IMG-202402.png" style="height : 50px; object-fit : cover"/>
             </div>
             <div class="d-lg-none">
                 <button type="button" class="btn" title="toggle-menu"><i class="ri-menu-2-line"></i></button>
