--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav class="bg-white px-2 py-3">
         <div class="container mx-0 d-flex justify-content-between">
             <div class="logo">
-                Tech Pioneers
+              <img src="./images/IMG-202402.png" style="height : 50px; object-fit : cover"/>
             </div>
             <div class="d-lg-none">
                 <button type="button" class="btn" title="toggle-menu"><i class="ri-menu-2-line"></i></button>
