fixed the file path

--- a/About.html
+++ b/About.html
@@ -38,7 +38,7 @@
             <div class="d-flex" style="transform: translateX(10rem);">
                 <ul class="d-flex list-unstyled nav-list my-2">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="./about.html">About</a></li>
                 </ul>
                 <div>
                     <a href="contact.html"><button type="button" class="btn btn-primary mt-1 contact-btn" style="background-color:#8C52FF;">Contact</button></a>
